<resources>
    <string name="app_name">Android_SPD_111_Dunaiev</string>

    <!-- MAIN ACTIVITY -->
    <string name="main_tv_title">Основи Андроїд</string>
    <string name="main_btn_calc">Калькулятор</string>

    <!-- CALC ACTIVITY -->
    <string name="calc_tv_title">Calculator\n</string>
    <string name="calc_btn_percent">%</string>
    <string name="calc_btn_c">C</string>
    <string name="calc_btn_ce">CE</string>
    <string name="calc_btn_backspace">\u232B</string>
    <string name="calc_btn_inversion">\u00B9/\u2093</string>
    <string name="calc_btn_square">x\u00B2</string>
    <string name="calc_btn_sqrt">\u221Ax</string>
    <string name="calc_btn_divide">\u00F7</string>
    <string name="calc_btn_7">7</string>
    <string name="calc_btn_8">8</string>
    <string name="calc_btn_9">9</string>
    <string name="calc_btn_6">6</string>
    <string name="calc_btn_5">5</string>
    <string name="calc_btn_4">4</string>
    <string name="calc_btn_3">3</string>
    <string name="calc_btn_2">2</string>
    <string name="calc_btn_1">1</string>
    <string name="calc_btn_0">0</string>
    <string name="calc_btn_multiply">\u00D7</string>
    <string name="calc_btn_minus">\u002D</string>
    <string name="calc_btn_add">\u002B</string>
    <string name="calc_btn_change_sign">\u00B1</string>
    <string name="calc_btn_comma">\u002C</string>
    <string name="calc_btn_equal">\u003D</string>

</resources>